# fund-holdings-aggregator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull_request.yaml
src/: constants.py  file_utils.py  header_detector.py  holdings_aggregator.py  holdings_file_handler.py  holdings_pipeline.py  main.py  market_classifier.py  portfolio_aggregator.py
tests/: conftest.py  test_constants.py  test_file_utils.py  test_header_detector.py  test_holdings_aggregator.py  test_holdings_file_handler.py  test_holdings_pipeline.py  test_main.py  test_market_classifier.py  utils.py
tests/files/: missing_header.xlsx  spyy-gy.xlsx
