[project]
name = "portfolio-holdings-aggregator"
version = "0.1.0"
description = "A Python tool that aggregates fund holdings data by Country, Market Type, Currency, and Sector from Excel files"
readme = "README.md"
authors = [
    { name = "Luigi Loria", email = "41837640+GigiLoria5@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
]
