[project]
name = "fund-holdings-aggregator"
version = "0.1.0"
description = "A Python tool that aggregates fund holdings data by Country, Market Type, Currency, and Sector from Excel files"
readme = "README.md"
authors = [
    { name = "Luigi Loria", email = "41837640+GigiLoria5@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl==3.1.5",
    "pandas==3.0.0",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pandas-stubs==3.0.0.260204",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock>=3.15.1",
    "ruff==0.15.1",
]

[project.scripts]
fund-holdings-aggregator = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "PT", "UP"]
ignore = ["B008", "E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
allow_untyped_decorators = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
disallow_subclassing_any = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -p no:warnings --capture=fd"
log_cli = "true"
log_level = "INFO"
filterwarnings = "ignore::UserWarning"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
omit = [
    "./tests/*",
    "./src/main.py"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 99
